<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff6600"
    tools:context=".InfoDeveloper">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff1a1a"
        android:textColor="#ffffff"
        android:text="@string/titulo_infodeveloper" />

    <TextView
        android:id="@+id/textView4"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_infodeveloper" />

    <TextView
        android:id="@+id/textView5"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone_infodeveloper" />

    <TextView
        android:id="@+id/textView6"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_infodeveloper" />
</LinearLayout>